--- a/src/gutenberg-blocks/gutenberg-blocks-style.scss
+++ b/src/gutenberg-blocks/gutenberg-blocks-style.scss
@@ -53,18 +53,17 @@
         height: 80vh;
 
         iframe {
-            width: calc(100% + 64px);
-            height: calc(100% - 100px);
-            margin-left: -32px;
-            margin-bottom: -4px;
+            width: calc(100% + 32px);
+            height: calc(100% - 128px);
+            margin-left: -16px;
         }
 
         .modal-footer-area {
             height: 68px;
-            background: #dbdbdb;
-            width: calc(100% + 64px);
-            margin: 0px 0 -32px -32px !important;
-            padding: 1.2rem 3rem !important;
+            width: calc(100% + 32px);
+            margin-left: -16px !important;
+            padding: 1.2rem 1.2rem !important;
+            border-top: 1px solid #cbcbcb;
         }
     }
 
